...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fixed_building_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/building_name_header"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="start|center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/expand_collapse"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/expand_collapse"
                    style="@style/Widget.AppCompat.ImageButton"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_expand_more_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/hidden_building_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fixed_building_layout">

                <TextView
                    android:id="@+id/hidden_hour_of_operations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start">

                </TextView>

...
                    android:layout_height="wrap_content"
                    android:layout_gravity="start">

                </com.google.android.material.divider.MaterialDivider>

                <TextView
                    android:id="@+id/hidden_risk_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start">

                </TextView>

                <Button
                    android:id="@+id/proceed_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/proceed_label">

...
